fixed styling for the delete button when text is too long

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -37,6 +37,7 @@ body{
   padding-bottom: 5px;
   margin-right: 10px;
   height: max-content;
+  width: max-content;
 }
 .delete-list-button:hover{
   background-image: linear-gradient(to bottom, #f1b1b1, #c05151);
